// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button is expected to render active Button correctly 1`] = `
<button
  className="search-btn search-btn--active "
  onClick={[Function]}
>
  active btn
</button>
`;

exports[`Button is expected to render default Button correctly 1`] = `
<button
  className="search-btn  "
  onClick={[Function]}
>
  default btn
</button>
`;

exports[`Button is expected to render light Button correctly 1`] = `
<button
  className="search-btn  search-btn--light"
  onClick={[Function]}
>
  light btn
</button>
`;
